--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,22 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
     <include
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
         layout="@layout/russia"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <include
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
         layout="@layout/italy"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
 
 
 
